# RulesLawyerBot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  justfile  main.py  pyproject.toml  pytest.ini
docs/: BGG_API_SETUP.md  DOCKER_SETUP.md  GAMES_INDEX.md  INDEX.md  QUICKSTART.md  SGR_ARCHITECTURE.md
docs/other/: architecture_review_and_recommendations.md  fastapi_architecture_analysis.md  implementation_plan_with_existed_code.md  plan_review.md
docs/plans/: next_steps.md
docs/plans/docker_improvements/: DOCKER_BEFORE_AFTER.md  DOCKER_DEPLOYMENT_RECOMMENDATIONS.md  DOCKER_DOCUMENTATION_INDEX.md  DOCKER_QUICK_REFERENCE.md  DOCKER_REVIEW_COMPLETE.md  DOCKER_REVIEW_FILES.txt  DOCKER_REVIEW_SUMMARY.md  DOCKER_SECURITY_GUIDE.md  Dockerfile.recommended  docker-compose.recommended.yml
docs/plans/mvp/: COMPREHENSIVE_IMPLEMENTATION_PLAN.md  overview.md
docs/plans/mvp/phases/: phase1.md  (+4 more)
scripts/: generate_games_index.py
specs/: admin_panel.md
src/: __init__.py  config.py  main.py
src/agent/: definition.py  schemas.py  tools.py
src/formatters/: __init__.py  sgr.py
src/handlers/: __init__.py  callbacks.py  commands.py  messages.py
src/pipeline/: __init__.py  handler.py  state.py
src/rules_lawyer_bot/: __init__.py  config.py  main.py
src/rules_lawyer_bot/agent/: definition.py  tools.py
src/rules_lawyer_bot/formatters/: __init__.py
src/rules_lawyer_bot/handlers/: __init__.py  callbacks.py  commands.py  messages.py
src/utils/: logger.py  observability.py  progress_reporter.py  safety.py  telegram_helpers.py  timer.py
tests/: __init__.py  conftest.py  load_test.py  test_integration.py  test_tools.py
(+11 files in other folders)
