[project]
name = "ruleslawyerbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=2.8.1",
    "openai-agents>=0.6.1",
    "pypdf>=6.3.0",
    "python-telegram-bot>=22.5",
    "python-dotenv>=1.0.0",
    "ruff>=0.14.8",
    "pydantic-settings>=2.0.0",
]
